--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.0.10",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
