--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@primeng/themes": "^19.0.10",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "ng-select2-component": "^17.2.4",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
